--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,10 +2,10 @@
 <RelativeLayout
     android:id="@+id/activity_main"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.fashare.stacklayout.MainActivity">
+    android:gravity="center"
+    android:clipChildren="false">
 
     <com.fashare.stack_layout.StackLayout
         android:id="@+id/stack_layout"
