--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -3,14 +3,43 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="500dp"
-    app:cardCornerRadius="6dp">
+    android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    app:cardCornerRadius="6dp"
+    app:cardBackgroundColor="#aaaaaa">
 
-    <TextView
-        android:id="@+id/tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:textSize="22sp"/>
+    <FrameLayout
+        android:id="@+id/layout_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/tv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            tools:text="haha"
+            android:textSize="22sp"/>
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:id="@+id/iv_like"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@mipmap/like"
+            android:layout_gravity="center"/>
+
+        <ImageView
+            android:id="@+id/iv_delete"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:src="@mipmap/delete"
+            android:layout_gravity="center"/>
+
+    </FrameLayout>
 
 </android.support.v7.widget.CardView>
