fix bug, and add comments

--- a/app/src/main/res/layout/item_card.xml
+++ b/app/src/main/res/layout/item_card.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     app:cardCornerRadius="6dp"
-    app:cardBackgroundColor="#aaaaaa">
+    app:cardBackgroundColor="@android:color/transparent">
 
     <FrameLayout
         android:id="@+id/layout_content"
